added css file table_medical_appointments for patient_medical_appointments and doctors_medical_appointments

--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,7 @@ db.sqlite3
 patient/__pycache__
 account/__pycache__
 doctor/__pycache__
+doctor/migrations/__pycache__
+patient/migrations/__pycache__
+account/migrations/__pycache__
 core/__pycache__
