Update .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,6 @@
 media
 venv
 db.sqlite3
-patient/__pycache__
-account/__pycache__
-doctor/__pycache__
-doctor/migrations/__pycache__
-patient/migrations/__pycache__
-account/migrations/__pycache__
-core/__pycache__
+__pycache__
+.vscode
+migrations
